jenkins-docker/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  ports:
    - name: http  # Añadí un nombre para el puerto 8080
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: agent  # Añadí un nombre para el puerto 50000
      port: 50000
      targetPort: 50000
      protocol: TCP
  selector:
    app: jenkins
  type: LoadBalancer  # O ClusterIP si prefieres no exponerlo fuera del clúster
